Fix layout issues

--- a/assets/styles/layouts/pages/_about.scss
+++ b/assets/styles/layouts/pages/_about.scss
@@ -36,7 +36,7 @@
   }
 }
 .agents-row {
-  padding-top: 30px;
+  padding-top: 25px;
 }
 .team-box {
   position: relative;
